# maestrai

./: .env.example  .gitignore  LICENSE  PHASE2_MUSIC_TRANSCRIPTION_PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.bat  setup.py  setup.sh
.github/workflows/: tests.yml
docs/: API.md  CONTRIBUTING.md  PHASE1_COMPLETE.md  QUICK_REFERENCE.md  README.md  SETUP.md  TESTING.md
examples/: basic_usage.py  batch_processing.py  video_transcription.py
scripts/: demo.py  music_demo.py
src/: __init__.py  audio_analyzer.py  audio_processor.py  music_transcription_engine.py  score_generator.py  transcription_engine.py
src/utils/: __init__.py  config.py
tests/: __init__.py  test_transcription.py
